--- a/css/place-kitty.css
+++ b/css/place-kitty.css
@@ -8,6 +8,7 @@ img[alt="Kitty 1"]
   left: 129px;
 }
 
+img[alt="Kitty 2"]
 /* Select the image with id of kitty-2 */
 
 /*__write_selector_here__*/ {
