--- a/css/place-kitty.css
+++ b/css/place-kitty.css
@@ -1,7 +1,7 @@
-img[alt="Kitty 1"]
+
 /* Select the image with a class of kitty-1 */
 
-/*__write_selector_here__*/ {
+img[alt="Kitty 1"] {
   position: absolute;
   z-index: 1;
   top: 276px;
