Automatically backed up by Learn

--- a/css/place-kitty.css
+++ b/css/place-kitty.css
@@ -8,10 +8,10 @@ img[alt="Kitty 1"] {
   left: 129px;
 }
 
-img[alt="Kitty 2"]
+
 /* Select the image with id of kitty-2 */
 
-/*__write_selector_here__*/ {
+img[alt="Kitty 2"]{
   position: absolute;
   z-index: 2;
   top: 212px;
