--- a/css/place-kitty.css
+++ b/css/place-kitty.css
@@ -18,10 +18,10 @@ img[alt="Kitty 2"]{
   left: 369px;
 }
 
-#box img[alt="Kitty 3"]
+
 /* Select the image inside the element with an id of basket (using its descendent relationship) */
 
-/*__write_selector_here__*/ {
+#box img[alt="Kitty 3"]{
   position: absolute;
   z-index: 5;
   top: 291px;
