--- a/css/place-kitty.css
+++ b/css/place-kitty.css
@@ -30,7 +30,7 @@ img[alt="Kitty 2"]{
 
 /* Select the image based on it being a sibling that follows immediately after the element with an id of ball (using adjacent sibling selector) */
 
-/*__write_selector_here__*/ {
+div + img[alt="Kitty 4"] {
   position: absolute;
   z-index: 4;
   top: 260px;
